[tool.poetry]
name = "mkdocs-material"
version = "0.1.0"
description = "my blogs"
authors = ["hackettyu <hy.lobby@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
mkdocs-minify-plugin = "^0.4.0"
mkdocs-rss-plugin = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# [[tool.poetry.source]]
# name = "douban"
# url = "https://pypi.doubanio.com/simple"
