[tool.poetry]
# XXX: https://github.com/python-poetry/poetry/issues/236
name = "hackettyu-mkdocs-material"
version = "0.1.0"
description = "my blog"
authors = ["hackettyu <hy.lobby@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^57.2.0"
wheel = "^0.36.2"

requests = "^2.26.0"

mike = "^1.0.1"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.11"
mkdocs-minify-plugin = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"
mkdocs-redirects = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
